--- a/PrograGoku/.classpath
+++ b/PrograGoku/.classpath
@@ -8,5 +8,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/jars/slick.jar"/>
+	<classpathentry kind="lib" path="lib/jars/CharactersCreatorAPI.jar" sourcepath="lib/jars/CharactersCreatorAPI.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Users/Gómez%20Montero/Desktop/PrograGoku/PrograGoku/lib/javadocs/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
