--- a/PrograGoku/.classpath
+++ b/PrograGoku/.classpath
@@ -8,6 +8,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/jars/slick.jar"/>
+	<classpathentry kind="lib" path="lib/jars/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="lib/jars/ibxm.jar"/>
+	<classpathentry kind="lib" path="lib/jars/jogg-0.0.7.jar"/>
+	<classpathentry kind="lib" path="lib/jars/jorbis-0.0.15.jar"/>
 	<classpathentry kind="lib" path="lib/jars/CharactersCreatorAPI.jar" sourcepath="lib/jars/CharactersCreatorAPI.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="file:/C:/Users/Gómez%20Montero/Desktop/PrograGoku/PrograGoku/lib/javadocs/"/>
